# norreroute

./: CHANGELOG.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: api-reference.md  local-setup.md  providers.md
docs/archive/: architecture-brief-v0.2-2026-05-01.md  norreroute-vision-feature-request.md  vision-feature-brief.md
src/aiproxy/: client.py  registry.py  streaming.py  types.py
src/norreroute/: __init__.py  client.py  conversation.py  errors.py  json_mode.py  pricing.py  pricing_data.py  provider.py  registry.py  retry.py  tracing.py  types.py
tasks/: security-review.out.md
tasks/TASK-1-image-part-type/: brief.md  state.json
tasks/TASK-1-package-scaffold/: state.json
tasks/TASK-1-retry/: brief.md  state.json
tasks/TASK-2-core-data-model/: state.json
tasks/TASK-2-core-types/: state.json
tasks/TASK-2-ollama-vision/: brief.md  state.json
tasks/TASK-2-pricing/: brief.md  state.json
tasks/TASK-3-anthropic-vision/: brief.md  state.json
tasks/TASK-3-json-mode/: brief.md  state.json
tasks/TASK-3-provider-protocol-and-client/: state.json
tasks/TASK-3-provider-protocol-client/: state.json
tasks/TASK-4-anthropic-provider/: state.json
tasks/TASK-4-capability-guard/: brief.md  state.json
tasks/TASK-4-tracing/: brief.md  state.json
tasks/TASK-5-conversation/: brief.md  state.json
tasks/TASK-5-ollama-provider/: state.json
tasks/TASK-6-integration-tests/: state.json
tests/: conftest.py  test_anthropic_vision.py  test_capability_guard.py  test_ollama_vision.py  test_vision_types.py
(+44 files in other folders)
